# simple-bytes

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yaml
src/: bytes.rs  bytes_array.rs  bytes_mut.rs  bytes_owned.rs  bytes_read.rs  bytes_seek.rs  bytes_write.rs  cursor.rs  lib.rs  offset.rs  offset_cursor.rs  util.rs
