[package]
name = "simple-bytes"
description = "A small and easy crate to mutate or read u8 slices"
version = "0.2.13"
authors = ["Sören Meier <soeren@s-me.ch>"]
repository = "https://github.com/soerenmeier/simple-bytes"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bytes", "read", "write", "io"]
categories = ["network-programming", "data-structures"]
rust-version = "1.56"